Fix z-index property through the app

--- a/src/styles/components/_upvotes.scss
+++ b/src/styles/components/_upvotes.scss
@@ -2,9 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-
   position: relative;
-  z-index: 5;
 
   min-width: 3rem;
   padding-top: var(--spacer__16);
